# least_squares_method

./: Manual.ipynb  README.md  mmq_high_precision.py  mmq_regressor.py  pyproject.toml  requirements.txt
